# str_has_prefix

./: CMakeLists.txt  library.c  library.h  str_has_prefix.h
